# bradot

./: .clang-format  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.txt  DONORS.md  LICENSE.txt  LOGO_LICENSE.txt  README.md  SConstruct  methods.py  platform_methods.py  rename.py  scu_builders.py  version.py
core/: SCsub  core_bind.compat.inc  core_bind.cpp  core_bind.h  core_builders.py  core_constants.cpp  core_constants.h  core_globals.cpp  core_globals.h  core_string_names.cpp  core_string_names.h  doc_data.cpp  doc_data.h  register_core_types.cpp  register_core_types.h  typedefs.h  version.h
drivers/: register_driver_types.cpp  register_driver_types.h
editor/: action_map_editor.cpp  action_map_editor.h  add_metadata_dialog.cpp  add_metadata_dialog.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  directory_create_dialog.cpp  directory_create_dialog.h  doc_tools.cpp  doc_tools.h  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_asset_installer.h  editor_atlas_packer.cpp  editor_atlas_packer.h  editor_audio_buses.cpp  editor_audio_buses.h  editor_autoload_settings.cpp  editor_data.cpp  (+142 more)
platform/android/java/nativeSrcsConfigs/: CMakeLists.txt  README.md  build.gradle
(+4379 files in other folders)
